[package]
name = "nfthop"
version = "0.1.4"
authors = ["hooboi <pseudo@nfthop.xyz>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
# Please do not disable these. Doing so will cause overflow checks in
# all workspace members to stop working. Overflows should be errors.
overflow-checks = true

[dependencies]
cosmwasm-std = { version = "1.2.1" }
cosmwasm-storage = { version = "1.2.1" }
cosmwasm-schema = { version = "1.2.1" }
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
schemars = "0.8.8"
serde = "1.0"
thiserror = { version = "1.0.30" }

[dev-dependencies]
cw-multi-test = "0.16.2"